css/style.css
body {
    margin: 0;
    overflow-y: hidden;
    
}


#main-container {
    margin-left: 80px;
}
#main-container.axe:hover{
    cursor: url('../img/cursor_axe.png'), auto;
}
#main-container.pickaxe:hover{
    cursor: url('../img/cursor_pickaxe.png'), auto;
}
#main-container.eraser:hover{
    cursor: url('../img/cursor_eraser.png'), auto;
}
#main-container.shovel:hover{
    cursor: url('../img/cursor_shovel.png'), auto;
}

.regular-div {
    height: 40px;
    width: 40px;
    box-sizing: border-box;
    background-color: lightblue;
    flex-shrink: 0;
    background-size: cover;
}
.regular-div:hover{
    border: 1px solid white;
}

.regular-div:hover {
    border: 1px solid white;
}

.row {
    display: flex;
}

.treeLeaf {
    background-image: url(../img/leaf.png);
}

.treeTrunk {
    background-image: url(../img/tree.png);
}

.ground {
    background-image: url(../img/ground.png);
}

.ground.lava {
    background-image: url(../img/lava.png);
}

.hill {
    background-image: url(../img/ground.png);
}

.rock {
    background-image: url(../img/rock.png);
}

.grass {
    background-image: url(../img/grass.png) !important;
}


#sidebar{
    position: fixed;
    top: 0;
    bottom: 0;
    left: 0px;
    width: 80px;
    background-color: #313930;
    background-size: 250px 200vh;
    background-position: center center;
    border: 6px lightgray groove;
    box-sizing: border-box;

}
#toolbar .tool{
    width: 68px;
    height: 70px;
    background-size: 50px;
    background-repeat: no-repeat;
    cursor: pointer;
    box-sizing: border-box;
    background-position: 8px center;
    position: relative;
    
}
#toolbar .tool.selected{
    background-color: rgba(255,255,255,0.2);
}

#toolbar .tool:hover{
    background-size: 60px; 
    background-position: 4px center;
}


#toolbar #axe{
    background-image: url(../img/axe.png);
}

#toolbar #shovel{
    background-image: url(../img/shovel.png);
}

#toolbar #eraser{
    background-image: url(../img/eraser.png);
}

#toolbar #pickaxe{
    background-image: url(../img/pickaxe.png);
}

#minedTilesDiv{
    position: absolute;
    bottom: 5px;
    text-align: center;
    width: 68px;
}
#minedTilesDiv .minedTileDiv{
    width: 40px;
    height: 40px;
    background-color: chocolate;
    margin: 5px 14px;
    background-size: cover;
    color: white;
    font-size: 20px;
}
#minedTilesDiv #lava{
    background-image: url(../img/lava.png);
}
#minedTilesDiv #ground{
    background-image: url(../img/ground.png);
}
#minedTilesDiv #hill{
    background-image: url(../img/ground.png);
}
#minedTilesDiv #grass{
    background-image: url(../img/grass.png);
}
#minedTilesDiv #rock{
    background-image: url(../img/rock.png);
}
#minedTilesDiv #treeLeaf{
    background-image: url(../img/leaf.png);
}
#minedTilesDiv #treeTrunk{
    background-image: url(../img/tree.png);
}

.d-none {
    display: none;
}

